<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_surahs" android:icon="@drawable/ic_surah" android:title="@string/menu_surahs" />
        <item android:id="@+id/nav_reciters" android:icon="@drawable/ic_reciter" android:title="@string/menu_reciters" />
        <item android:id="@+id/d_read" android:icon="@drawable/ic_read" android:title="@string/menu_read" />
        <item android:id="@+id/d_tafsir" android:icon="@drawable/ic_tafsir" android:title="@string/menu_tafsir" />
        <item android:id="@+id/nav_video" android:icon="@drawable/ic_video" android:title="@string/menu_video" />
        <item android:id="@+id/d_live" android:icon="@drawable/ic_live" android:title="@string/menu_live" />
        <item android:id="@+id/d_radio" android:icon="@drawable/ic_radio" android:title="@string/menu_radio" />
        <item android:id="@+id/nav_library" android:icon="@drawable/ic_library" android:title="@string/menu_downloads" />
        <item android:id="@+id/d_fav" android:icon="@drawable/ic_heart" android:title="@string/menu_favorites" />
    </group>

    <item android:title="@string/grp_worship">
        <menu>
            <item android:id="@+id/d_prayer_times" android:icon="@drawable/ic_prayer_times" android:title="@string/menu_prayer_times" />
            <item android:id="@+id/d_qibla" android:icon="@drawable/ic_qibla" android:title="@string/menu_qibla" />
        </menu>
    </item>

    <group android:id="@+id/grp2">
        <item android:id="@+id/d_settings" android:icon="@drawable/ic_settings" android:title="@string/menu_settings" />
        <item android:id="@+id/d_share" android:icon="@drawable/ic_share" android:title="@string/menu_share" />
        <item android:id="@+id/d_rate" android:icon="@drawable/ic_star" android:title="@string/menu_rate" />
    </group>

    <item android:title="@string/grp_about_app">
        <menu>
            <item android:id="@+id/d_about" android:icon="@drawable/ic_info" android:title="@string/menu_about" />
            <item android:id="@+id/d_follow" android:icon="@drawable/ic_follow" android:title="@string/menu_follow" />
            <item android:id="@+id/d_support" android:icon="@drawable/ic_heart" android:title="@string/menu_support" />
            <item android:id="@+id/d_contact" android:icon="@drawable/ic_contact" android:title="@string/menu_contact" />
            <item android:id="@+id/d_sources" android:icon="@drawable/ic_read" android:title="@string/sources_title" />
            <item android:id="@+id/d_privacy" android:icon="@drawable/ic_check" android:title="@string/menu_privacy" />
        </menu>
    </item>
</menu>
